# libcotp

./: .gitignore  CMakeLists.txt  ChangeLog  IMPROVEMENTS.md  LICENSE  Makefile  README.md  SECURITY.md  compile.sh  cotp.pc.in  shippable.yml
.ci/: install_dep.sh  run_tests.sh
.circleci/: build_and_tests.sh  build_only.sh  config.yml  install_deps.sh
.github/workflows/: codeql-analysis.yml  sanitizers.yml
cmake/: COTPConfig.cmake.in  FindGcrypt.cmake  FindMbedTLS.cmake
fuzz/: CMakeLists.txt  fuzz_base32_decode.c  fuzz_get_totp_at.c  fuzz_otpauth_uri.c
src/: base32.c  cotp.h  ctx.c  libcotp.h  otp.c  strerror.c  whmac.h
src/utils/: base32.c  otpauth_uri.c  secure_zero.c  secure_zero.h  validation.c  whmac_gcrypt.c  whmac_mbedtls.c  whmac_openssl.c
tests/: CMakeLists.txt  check_otp.c  test_base32_roundtrip.c  test_base32decode.c  test_base32encode.c  test_otp.c  test_otpauth_uri.c  test_secure.c  test_strerror.c  test_validation.c
tests/docker/: Dockerfile  PKGBUILD  run_docker.sh
